Cambiando enlace de formulario de google

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div id="inscription-cont">
-        <a href="https://forms.gle/ovxurc9QYL2vdnJT7" type="button">Inscribirse</a>
+        <a href="https://forms.gle/kyxCz93Ba2JKu8io8" type="button">Inscribirse</a>
     </div>
 
 
