Realizando sjustes visuales

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="nav">
       <div id="logo-nav">
-        <img src="/img/liceofreire-logo.webp" alt="" />
+        <img src="public/img/liceofreire-logo.webp" alt="" />
       </div>
       <div id="cont-nav">
         <a href="https://liceofreire.com/">Liceo Freire</a>
@@ -22,17 +22,17 @@
     </div>
 
 
-
-    <div id="inscription-cont">
-        <a href="https://forms.gle/kyxCz93Ba2JKu8io8" type="button">Inscribirse</a>
-    </div>
+    
+    <div class="text-box">
+      <a href="https://forms.gle/kyxCz93Ba2JKu8io8" class="btn btn-white btn-animate">Participar del Evento</a>
+  </div>
 
 
     <div id="element-text-1"><p>PONENTES</p></div>
     <div id="cont-meets">
    
     <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/alexanderrubio.png" alt="">
         <p id="item-title">Alexander Rubio Álvarez</p>
         <p id="item-cont">Creador de la pedagogía del loto,
             poseedor de dos Guinness con el
@@ -48,32 +48,32 @@
             bibliotecas escolares.</p>
     </div>
     <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/anaisabelpiedrahita.png" alt="">
         <p id="item-title">Ana Isabel Piedrahita Mejía</p>
         <p id="item-cont">Rectora del Colegio Hontanares de
             Medellín.</p>
     </div>
     <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/claudiabermeo.png" alt="">
         <p id="item-title">Claudia Bermeo</p>
         <p id="item-cont">Psicóloga, especialista en
             Neuropsicología Infantil y Magister
             en Psicología Clínica y de la Salud.</p>
     </div>
     <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/juancarlosmelo.png" alt="">
         <p id="item-title">Juan Carlos Melo</p>
         <p id="item-cont">Atelierista y asesor pedagógico de
             jardines y colegios con modelos de
             escuelas activas para Latinoamérica.</p>
     </div>
     <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/freddypalacios.png" alt="">
         <p id="item-title">Fredy Palacios Diaz</p>
         <p id="item-cont">Docente de Matemáticas de la
             Secretaria de Educación de Pitalito.</p>
     </div> <div id="meet1">
-        <img src="public/img/pilar-lozano.png" alt="">
+        <img src="public/img/xavieragaray.png" alt="">
         <p id="item-title">Xavier Agaray </p>
         <p id="item-cont">Consultor internacional en
             Transformación de instituciones
@@ -175,11 +175,39 @@
   y no formal de Pitalito.</p>
 </div>
 
+<div id="ejes-tematicos-cont">
+  <img id="img-title-bottom-2" src="public/img/ejetematico.png" alt="">
+  <div>
+    <div><p><span>Retos de la escuela 2030</span>
+      Reimaginar la educación, la escuela que
+      soñamos, nuevas formas de educar,
+      educar desde el territorio y los contextos,
+      el asombro y la creatividad en el aula,
+      liderazgo educativo para transformar,
+      evaluación y aprendizaje.</p></div>
+    <div><p><span>Desarrollo de habilidades
+      digitales básicas.</span>
+      El Uso, abuso o adicción
+      a pantallas entre nuestros
+      jóvenes, ¿Cómo educar en
+      un mundo con más pantallas
+      que ventanas?, la gamificación
+      en el aula, claves para
+      programar, ¿Para qué aprender
+      robótica educativa y programación?</p></div>
+    <div><p><span>Educación del ser (emociones)
+      y aprendizajes desde el cerebro.</span>
+      Educar desde el cuerpo y los sentidos,
+      la escuela del ser, la familia y escuela
+      una alianza imprescindible
+      en la educación.</p></div>
+
+  </div>
+  </div>
 
 
 
 
 
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
