corrigiendo errores de diseño

--- a/index.html
+++ b/index.html
@@ -93,15 +93,12 @@
           <p id="sub-t2">10 Y 11 AGOSTO</p>
         </div>
         <div id="sub">
-            <div id="sub">
                 <p id="sub-t">HORA</p>
                 <p id="sub-t2">Según Programación</p>
-              </div>
         </div>
         <div id="sub">
-            <div id="sub">
-            
-              </div>
+          <p id="sub-t">LUGAR</p>
+          <div class="sub1"><div>INSTALACIONES:<br>Liceo Freire</div><div>Centro Cultural<br>Héctor Polanía Sánchez</div></div>
         </div>
       </div>
     </div>
