--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   madres comunitarias,
   estudiantes de pedagogía, normalistas y
   demás actores de la educación formal
-  y no formal de Pitalito.</p>
+  y no formal.</p>
 </div>
 
 <div id="ejes-tematicos-cont">
