--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div id="nav">
-      <div id="logo-nav">
+      <div class="logo-nav">
         <img src="public/img/liceofreire-logo.webp" alt="" />
       </div>
-      <div id="cont-nav">
+      <div class="cont-nav">
         <a href="https://liceofreire.com/">Liceo Freire</a>
         <a href="https://liceofreire.com/quienes-somos/">Acerca de Nosotros</a>
       </div>
     </div>
-    <div id="img-top">
+    <div class="img-top">
       <div><img src="public/img/img-top-1.png" alt="" /></div>
     </div>
 
@@ -28,82 +28,84 @@
   </div>
 
 
-    <div id="element-text-1"><p>PONENTES</p></div>
-    <div id="cont-meets">
+    <div class="element-text-1"><p>PONENTES</p></div>
+    
+    <div class="cont-meets">
    
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/alexanderrubio.png" alt="">
-        <p id="item-title">Alexander Rubio Álvarez</p>
-        <p id="item-cont">Creador de la pedagogía del loto,
+        <p class="item-title">Alexander Rubio Álvarez</p>
+        <p class="item-cont">Creador de la pedagogía del loto,
             poseedor de dos Guinness con el
             trabajo pedagógico con estudiantes
             de educación pública, investigador,
             pedagogo, docente, creador.</p>
     </div>
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/pilar-lozano.png" alt="">
-        <p id="item-title">Pilar Lozano</p>
-        <p id="item-cont">Periodista y escritora colombiana,
+        <p class="item-title">Pilar Lozano</p>
+        <p class="item-cont">Periodista y escritora colombiana,
             vinculada a la educación y a las
             bibliotecas escolares.</p>
     </div>
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/anaisabelpiedrahita.png" alt="">
-        <p id="item-title">Ana Isabel Piedrahita Mejía</p>
-        <p id="item-cont">Rectora del Colegio Hontanares de
+        <p class="item-title">Ana Isabel Piedrahita Mejía</p>
+        <p class="item-cont">Rectora del Colegio Hontanares de
             Medellín.</p>
     </div>
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/claudiabermeo.png" alt="">
-        <p id="item-title">Claudia Bermeo</p>
-        <p id="item-cont">Psicóloga, especialista en
+        <p class="item-title">Claudia Bermeo</p>
+        <p class="item-cont">Psicóloga, especialista en
             Neuropsicología Infantil y Magister
             en Psicología Clínica y de la Salud.</p>
     </div>
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/juancarlosmelo.png" alt="">
-        <p id="item-title">Juan Carlos Melo</p>
-        <p id="item-cont">Atelierista y asesor pedagógico de
+        <p class="item-title">Juan Carlos Melo</p>
+        <p class="item-cont">Atelierista y asesor pedagógico de
             jardines y colegios con modelos de
             escuelas activas para Latinoamérica.</p>
     </div>
-    <div id="meet1">
+    <div class="meet1">
         <img src="public/img/freddypalacios.png" alt="">
-        <p id="item-title">Fredy Palacios Diaz</p>
-        <p id="item-cont">Docente de Matemáticas de la
+        <p class="item-title">Fredy Palacios Diaz</p>
+        <p class="item-cont">Docente de Matemáticas de la
             Secretaria de Educación de Pitalito.</p>
-    </div> <div id="meet1">
+    </div> <div class="meet1">
         <img src="public/img/xavieragaray.png" alt="">
-        <p id="item-title">Xavier Agaray </p>
-        <p id="item-cont">Consultor internacional en
+        <p class="item-title">Xavier Agaray </p>
+        <p class="item-cont">Consultor internacional en
             Transformación de instituciones
             educativas, Liderazgo y fundador
             de Reimagine Education Lab en
             Barcelona.</p>
     </div>
 </div>
-    <div id="dates-conf">
-      <div id="dat-1">
+
+    <div class="dates-conf">
+      <div class="dat-1">
         <p>liceofreiresecretaria@gmail.com</p>
         <p>316 575 2467 - 317 502 7513</p>
       </div>
-      <div id="dat-2">
-        <div id="sub">
-          <p id="sub-t">DÍA</p>
-          <p id="sub-t2">10 Y 11 AGOSTO</p>
+      <div class="dat-2">
+        <div class="sub">
+          <p class="sub-t">DÍA</p>
+          <p class="sub-t2">10 Y 11 AGOSTO</p>
         </div>
-        <div id="sub">
-                <p id="sub-t">HORA</p>
-                <p id="sub-t2">Según Programación</p>
+        <div class="sub">
+                <p class="sub-t">HORA</p>
+                <p class="sub-t2">Según Programación</p>
         </div>
-        <div id="sub">
-          <p id="sub-t">LUGAR</p>
+        <div class="sub">
+          <p class="sub-t">LUGAR</p>
           <div class="sub1"><div>INSTALACIONES:<br>Liceo Freire</div><div>Centro Cultural<br>Héctor Polanía Sánchez</div></div>
         </div>
       </div>
     </div>
-    <div id="text1">
-      
+
+    <div class="text1">  
       <h1>LA EDUCACIÓN</h1>
       <p>La escuela actual, pese al surgimiento de nuevas estrategias pedagógicas y
       redes de aprendizaje innovador, sigue imperando en las aulas, las enseñanzas
@@ -137,7 +139,7 @@
       de educar las generaciones
       del siglo XXI.</p>
 
-      <img id="objetives-title" src="public/img/objetives-title.svg" alt="">
+      <img class="objetives-title" src="public/img/objetives-title.svg" alt="">
       <p><span>GENERAL</span></p>
     <p>Posibilitar el espacio de encuentro y reflexión en torno a la importancia
       que tiene la educación en la transformación de la región y el mundo;
@@ -161,8 +163,8 @@
     </div>
 
 
-<div id="objetive-people">
-<img id="img-title-bottom" src="public/img/titlebottom.svg" alt="">
+<div class="objetive-people">
+<img class="img-title-bottom" src="public/img/titlebottom.svg" alt="">
 <p>Docentes, directivos docentes,
   administradores educativos, líderes y
   agentes educativos, padres de familia,
@@ -172,8 +174,8 @@
   y no formal.</p>
 </div>
 
-<div id="ejes-tematicos-cont">
-  <img id="img-title-bottom-2" src="public/img/ejetematico.png" alt="">
+<div class="ejes-tematicos-cont">
+  <img class="img-title-bottom-2" src="public/img/ejetematico.png" alt="">
   <div>
     <div><p><span>Retos de la escuela 2030</span>
       Reimaginar la educación, la escuela que
