--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
       la persona en el centro del aprendizaje. 
     </p>
     <p><span>ESPECIFICOS</span></p>
-    <li>
-      <ul>Movilizar a los actores que conforman las comunidades educativas
+    <ul>
+      <li>Movilizar a los actores que conforman las comunidades educativas
         de la región para hacer parte activa de los cambios que debe hacer la
         educación en función del ciudadano que soñamos para la sociedad
-        del siglo XXI.</ul>
-      <ul>Reflexionar en torno a la importancia del docente y el directivo
+        del siglo XXI.</li>
+      <li>Reflexionar en torno a la importancia del docente y el directivo
         docente en la transformación educativa y en la conexión que existe
         entre la vocación, pasión y la mirada de futuro del ser humano que
-        se educa.</ul>
-      <ul>Identificar las habilidades necesarias en el ser humano que educa
+        se educa.</li>
+      <li>Identificar las habilidades necesarias en el ser humano que educa
         la escuela del siglo XXI que se conviertan en uno de los horizontes
-        de transformación de la escuela de la región.</ul>
-    </li>
+        de transformación de la escuela de la región.</li>
+      </li>
     </div>
 
 
