--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
     <div class="meet1">
         <img src="public/img/freddypalacios.png" alt="">
         <p class="item-title">Fredy Palacios Diaz</p>
-        <p class="item-cont">Docente de Matemáticas de la
-            Secretaria de Educación de Pitalito.</p>
-    </div> <div class="meet1">
+        <p class="item-cont">Magister en didáctica de la matemáticas 
+          Docente de la Secretaria de Educación de Pitalito.</p>
+    </div>
+    <div class="meet1">
         <img src="public/img/xavieragaray.png" alt="">
         <p class="item-title">Xavier Agaray </p>
         <p class="item-cont">Consultor internacional en
@@ -84,6 +85,16 @@
             de Reimagine Education Lab en
             Barcelona.</p>
     </div>
+    <div class="meet1">
+      <img src="public/img/alexchaux.jpg" alt="">
+      <p class="item-title">Alexander Chaux y Danna Isabela Chaux</p>
+      <p class="item-cont">Ing. de sistemas.  Líder tic del SENA. Especialista en proyectos de desarrollo.  Magister en visualización de datos BIGDATA y analítica de datos. Su hija es estudiante del grado 8º del Liceo Freire, líder emprendedora en programación e inteligencia artificial.</p>
+  </div>
+  <div class="meet1">
+    <img src="public/img/mayahernandez.jpg" alt="">
+    <p class="item-title">Maya Hernandez, Milena Alarcon y Alejandro Hernández</p>
+    <p class="item-cont">Familia Freire, habitante del área rural del Pueblo Escultor, Pajareros, observadores de aves, admiradores de la naturaleza, artífices de proyectos comunitarios locales de educación ambiental para la conservación de la biodiversidad, y autores de la guía de aves del pueblo escultor.</p>
+</div>
 </div>
 
     <div class="dates-conf">
@@ -106,6 +117,21 @@
         </div>
       </div>
     </div>
+
+    <div class="info-mod">
+      <div>
+        <h3>Modalidad</h3>
+        <p>Presencial, en el Liceo Freire (jueves) y auditorio Héctor Polania Sánchez (viernes).</p>
+      </div>
+      <div>
+        <h3>Inscripciones</h3>
+        <p>Podrán acceder al link que se dispondrá en las redes sociales y pagina del colegio para diligenciar el formulario de inscripción hasta el 31 de julio del 2023. <br><br>
+          Mayor información para el proceso de inscripción, comunicarse con Jimena Astudillo   <span>liceofreiresecretaria@gmail.com 3175027513 - 3163752467</span><br><br>
+          El costo de la inscripción y participación del evento tiene un costo de <span>$200.000</span> que incluye Asistencia presencia a día y medio de capacitación (2 talleres, conferencias y panel), tres (3) meriendas, memorias y certificados, material para tomar apuntes.
+          </p>
+      </div>
+    </div>
+
 
     <div class="text1">  
       <h1>LA EDUCACIÓN</h1>
@@ -206,8 +232,14 @@
   </div>
   </div>
 
-
-
+<div class="img-dates-movil">
+  <div></div>
+</div>
+  
+  <div class="img-dates">
+    <div></div>
+  </div>
+  <br><br><br>
 
 
   </body>
