Corrigiendo imagen principal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="img-top">
-      <div><img src="public/img/img-top-1.png" alt="" /></div>
+      <div><img src="public/img/img-top.png" alt="" /></div>
     </div>
 
 
