Corrigiendo fecha limite de inscripcion

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div>
         <h3>Inscripciones</h3>
-        <p>Podrán acceder al link que se dispondrá en las redes sociales y pagina del colegio para diligenciar el formulario de inscripción hasta el 31 de julio del 2023. <br><br>
+        <p>Podrán acceder al link que se dispondrá en las redes sociales y pagina del colegio para diligenciar el formulario de inscripción hasta el 4 de Agosto del 2023. <br><br>
           Mayor información para el proceso de inscripción, comunicarse con Jimena Astudillo   <span>liceofreiresecretaria@gmail.com 3175027513 - 3163752467</span><br><br>
           El costo de la inscripción y participación del evento tiene un costo de <span>$200.000</span> que incluye Asistencia presencia a día y medio de capacitación (2 talleres, conferencias y panel), tres (3) meriendas, memorias y certificados, material para tomar apuntes.
           </p>
